--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "react": "18.2.0",
     "react-native": "0.72.1",
+    "react-native-bootsplash": "^4.7.5",
     "react-native-safe-area-context": "^4.6.4",
     "react-native-screens": "^3.22.1",
     "react-redux": "^8.1.1"
