--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "VirtualSpiritTechnicalTest",
-  "displayName": "VirtualSpiritTechnicalTest"
+  "name": "Like Counter",
+  "displayName": "Like Counter"
 }
