--- a/ios/LikeCounter.xcodeproj/xcshareddata/xcschemes/LikeCounter.xcscheme
+++ b/ios/LikeCounter.xcodeproj/xcshareddata/xcschemes/LikeCounter.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "VirtualSpiritTechnicalTest.app"
-               BlueprintName = "VirtualSpiritTechnicalTest"
-               ReferencedContainer = "container:VirtualSpiritTechnicalTest.xcodeproj">
+               BuildableName = "LikeCounter.app"
+               BlueprintName = "LikeCounter"
+               ReferencedContainer = "container:LikeCounter.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "VirtualSpiritTechnicalTestTests.xctest"
-               BlueprintName = "VirtualSpiritTechnicalTestTests"
-               ReferencedContainer = "container:VirtualSpiritTechnicalTest.xcodeproj">
+               BuildableName = "LikeCounterTests.xctest"
+               BlueprintName = "LikeCounterTests"
+               ReferencedContainer = "container:LikeCounter.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "VirtualSpiritTechnicalTest.app"
-            BlueprintName = "VirtualSpiritTechnicalTest"
-            ReferencedContainer = "container:VirtualSpiritTechnicalTest.xcodeproj">
+            BuildableName = "LikeCounter.app"
+            BlueprintName = "LikeCounter"
+            ReferencedContainer = "container:LikeCounter.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "VirtualSpiritTechnicalTest.app"
-            BlueprintName = "VirtualSpiritTechnicalTest"
-            ReferencedContainer = "container:VirtualSpiritTechnicalTest.xcodeproj">
+            BuildableName = "LikeCounter.app"
+            BlueprintName = "LikeCounter"
+            ReferencedContainer = "container:LikeCounter.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
